--- a/codes/style.css
+++ b/codes/style.css
@@ -6,14 +6,19 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 5px;
-    width: 200px;
+    width: 300px;
 }
 
 .mezo {
     border: 1px solid black;
-    width: 100%;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     text-align: center;
+}
+
+.mezo img {
+    width: 100px;
+    height: 100px;
 }
 
 main {
